# fake-weather-challenge

./: .gitmodules  CHALLENGE.md  README.md  docker-compose.prod.yml  docker-compose.yml
src/: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  run.sh
src/api/: serializers.py  tests.py  urls.py  views.py
src/app/: settings.py  urls.py
src/app/settings/: base.py  dev.py  prod.py
src/weather/: client.py  exceptions.py
src/weather/providers/: __init__.py  _base.py  accuweather.py  noaa.py  weatherdotcom.py
